klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/property/IdAndKeyPropertiesErrorTest.klass
package example

class ExampleClass
{
    key: Long key;
    id: Long id key;
}

// TODO: ERR_KEY_IDS should be reported on properties, not classes.
